Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-79267

Signal/slot editor doesn't update when widget's name is changed

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.14.0 RC1
    • 4.0.0
    • Tools: Designer
    • None
    • ff1f5a93123db705419a60d8028c21c0dd7f4124 (qt/qttools/5.15)

    Description

      To reproduce:

      1. Create 2 pushbuttons
      2. Make signal/slot connection between them
      3. Show signal/slot editor
      4. Rename one of buttons - the name doesn't change in signal/slot editor

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kleint Friedemann Kleint
            jkobus Jarek Kobus
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes