Qt Designer: Fix updating of object names in the signal/slot editor

Fix invalid indexes emitted in update signal.

Fixes: QTBUG-79267
Change-Id: I5c99d8102d9be0e5296364697e85ee55f49147d9
Reviewed-by: Jarek Kobus <jaroslaw.kobus@qt.io>